add categories pages

--- a/shop/translations/messages.fr.yaml
+++ b/shop/translations/messages.fr.yaml
@@ -1,1 +1,11 @@
-key: word
+Home: Accueil
+Cart: Panier
+Shop: Boutique
+Contact: Contact
+
+Connect: Connexion
+Disconect: Déconnexion
+
+Register: Inscription
+MyAccount: Mon Compte
+MyOrders: Mes Commandes
